# commanager

./: .gitignore  PAYPAL Credentials  README.md  __init__.py  config.py  model.py  package-lock.json  package.json  pyproject.toml  requirements.txt
commanager/: __init__.py  config.py  model.py
commanager/client/: package-lock.json  package.json
commanager/client/public/: create_account.html  destroy_account.html  files.html  home.html  login.html  messages.html  orders.html  payment.html  request.html  settings.html  signup.html  user.html
commanager/frontend/templates/: home.html  payment.html  user.html
commanager/frontend/views/: __init__.py  accounts.py  index.py  payment.py  utils.py
commanager/public/: index.html  manifest.json
commanager/public/junk_html/: home.html
commanager/server/: __init__.py  app.py  config.py  model.py
commanager/server/routes/: __init__.py  accounts.py  destroy_account.py  home.py  login_signup.py  page_routes.py  payment.py  user.py  utils.py
commanager/server/templates/: destroy_account.html  home.html  login.html  messages.html  orders.html  payment.html  request.html  settings.html  signup.html  user.html
commanager/src/: app.js
commanager/src/components/: login.js
commanager/src/css/: login_signup.css  user.css
frontend/.next/cache/: .rscinfo
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/templates/: home.html  payment.html  signup.html  test.html
html/: home.html  login.html  request.html  signup.html
html/css/: home.css  login_signup.css  main.css
(+24 files in other folders)
