[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commanager"
version = "1.0.0"
dependencies = [
    "arrow",
    "bs4",
    "Flask",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "pytest",
    "requests",
]
requires-python = ">=3.12"

[tool.setuptools]
packages = ["commanager"]

[tool.pylint."messages control"]
disable = ["cyclic-import"]
